- fixed noscript height on mobile browsers

--- a/public/css/noscript.css
+++ b/public/css/noscript.css
@@ -6,7 +6,7 @@
  */
 noscript {
   position: absolute;      
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   margin-top: -48px;
   padding-top: 52px;
